# community-service-center

./: CHANGELOG.md  RELEASE.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
.trae/rules/: project_rules.md
app/assets/css/: scrollbar.css  tailwind.css
app/composables/: useAPIService.ts  useDataRepository.ts  useDynamicIsland.ts  useLog.ts  useNavBar.ts  useTauriDatabase.ts  useTauriHTTP.ts  useTauriSQL.ts  useTauriServices.ts  useToast.ts
app/config/: routes.ts
app/layouts/: default.vue
app/lib/: tauri-plugins.ts
app/middleware/: environment.global.ts
app/pages/: connect.vue  data-dashboard.vue  demo-environment.vue  example.vue  index.vue  settings.vue  tauri-demo.vue  todos.vue
app/pages/settings/: api-config.vue  index.vue  server-config.vue
app/pages/tools/: index.vue  json-formatter.vue
scripts/: quick-release.sh  update-tauri-version.js  update-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
