[package]
name = "community-service-center"
version = "0.1.32"
description = "Community Service Center - A modern desktop application for community management"
authors = [ "gnakzz" ]
license = "MIT"
repository = "https://github.com/zzstudio/community-service-center"
edition = "2021"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2"
